validation updates to remove longitude and latitude
