# app/Http/Requests/V1/Vendor/VendorRequest.php
@@ -26,8 +26,6 @@ class VendorRequest extends FormRequest
     {
         return array_merge($this->restaurantRules(),
             [
-                // 'latitude' => ['required', 'numeric', 'min:-90', 'max:90'],
-                // 'longitude' => ['required', 'numeric', 'min:-180', 'max:180'],
                 'address' => ['required', 'string', 'max:1000'],
                 'city' => ['required', 'string', 'max:255'],
                 'state' => ['required', 'string', 'max:255'],
@@ -48,8 +46,6 @@ class VendorRequest extends FormRequest
             [
                 'logo' => ['nullable', 'image', 'max:2000', Rule::dimensions()->minWidth(200)->minHeight(200)->maxWidth(1000)->maxHeight(1000)->ratio(1)],
                 'cover_image' => ['nullable', 'image', 'max:2000', Rule::dimensions()->minWidth(200)->minHeight(200)->maxWidth(2000)->maxHeight(2000)->ratio(2 / 1)],
-                'latitude' => ['nullable', 'numeric', 'min:-90', 'max:90'],
-                'longitude' => ['nullable', 'numeric', 'min:-180', 'max:180'],
                 'address' => ['nullable', 'string', 'max:1000'],
                 'city' => ['nullable', 'string', 'max:255'],
                 'state' => ['nullable', 'string', 'max:255'],
